--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "contributors": [
     "lovezhangchuangxin <2911331070@qq.com>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lovezhangchuangxin/koishi-plugin-screeps.git"
+  },
+  "author": {
+    "name": "lovezhangchuangxin",
+    "email": "2911331070@qq.com"
+  },
   "peerDependencies": {
     "koishi": "^4.18.7"
   },
